--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<h3>Mistic Devs Group<h3>
-<h3>This Page Under Maintenance<h3>
+<html>
+  <body>
+    <h3>Mistic Devs Group<h3>
+    <p>
+      Kami merupakan pengembang aplikasi Mobile, untuk anda yang menghunjungi website kami, kami ucapkan terima kasih.
+    </p>
+  </body>
+<html>
